--- a/pre/scss/pages/_game-play.scss
+++ b/pre/scss/pages/_game-play.scss
@@ -490,6 +490,183 @@
         }
     }
 
+    &.HOTP {
+        height: auto;
+
+        .play-game {
+            background-image: url(../img/game/HOTP/bg.jpg);
+            background-size: cover;
+
+            .game-content {
+                padding: size(120) size(88) size(88);
+                position: inherit;
+
+                .title {
+                    position: absolute;
+                    top: size(12);
+                    left: size(16);
+                    width: size(120);
+                }
+
+                .frame {
+                    position: relative;
+                    background-image: url(../img/game/HOTP/frame-strech.png);
+                    background-size: 100%;
+                    padding-left: calc(((((size(1440) - size(28)*2) - size(28)*2) * .6) - (size(88) * 2)) * .04);
+                    // 算式：((container - card padding) * game-zone flex) - (左右 padding)) * 左邊框4%
+                    padding-right: calc(((((size(1440) - size(28)*2) - size(28)*2) * .6) - (size(88) * 2)) * .04);
+                    // 算式：((container - card padding) * game-zone flex) - (左右 padding)) * 右邊框4%
+
+                    >span {
+                        position: absolute;
+                        left: 0;
+                        right: 0;
+                        top: 50%;
+                        transform: translate(0, -50%);
+                    }
+
+                    &::before,
+                    &::after {
+                        content: '';
+                        position: absolute;
+                        left: 0;
+                        right: 0;
+                        height: 100%;
+                        background-size: 100%;
+                        background-repeat: no-repeat;
+                        z-index: 2;
+                    }
+
+                    &::before {
+                        background-image: url(../img/game/HOTP/frame-top.png);
+                        background-position: top center;
+                        top: calc((((size(1440) - size(28)*2) * .6) - (size(88) * 2)) * -.05);
+                        // 算式：((container - card padding) * game-zone flex) - (左右 padding)) * 上邊框5%
+                    }
+
+                    &::after {
+                        background-image: url(../img/game/HOTP/frame-bottom.png);
+                        background-position: bottom center;
+                        bottom: calc((((size(1440) - size(28)*2) * .6) - (size(88) * 2)) * -.035);
+                        // 算式：((container - card padding) * game-zone flex) - (左右 padding)) * 下邊框3.5%
+                    }
+
+                    &-content {
+                        background-color: rgba(color(gray-9), .8);
+                        padding: size(20);
+                        display: grid;
+                        gap: size(16);
+                        grid-template-columns: calc(30% - size(8)) calc(70% - size(8));
+                        grid-template-rows: size(68) auto 1fr auto;
+
+                        >* {
+                            position: inherit;
+                            z-index: 3;
+                        }
+
+                        .img {
+                            grid-column: 1/2;
+                            grid-row: 1/3;
+                            position: relative;
+                            padding: calc((((((((size(1440) - size(28)*2) * .6) - (size(88) * 2)) * .894) - (size(16) * 2)) * .3) - size(8)) * .045);
+                            // 算式：(((((container - card padding) * game-zone flex) - (左右 padding)) * [100% - (左右邊框 5.3% * 2) = .894] - 左右 padding * .img flex 30%) - gap/2) * .img 邊框
+
+                            h6 {
+                                position: absolute;
+                                right: calc((((((((size(1440) - size(28)*2) * .6) - (size(88) * 2)) * .894) - (size(16) * 2)) * .3) - size(8)) * .045);
+                                // 算式：(((((container - card padding) * game-zone flex) - (左右 padding)) * [100% - (左右邊框 5.3% * 2) = .894] - 左右 padding * .img flex 30%) - gap/2) * .img 邊框
+                                bottom: calc(((((((((size(1440) - size(28)*2) * .6) - (size(88) * 2)) * .894) - (size(16) * 2)) * .3) - size(8)) * .045) + size(4));
+                                // 算式：(((((container - card padding) * game-zone flex) - (左右 padding)) * [100% - (左右邊框 5.3% * 2) = .894] - 左右 padding * .img flex 30%) - gap/2) * .img 邊框 + 4px
+                                padding: size(6) size(16) size(6) size(20);
+                                border-top-left-radius: size(30);
+                                background: linear-gradient(296deg, #D4951A 27.32%, #F3D99C 66.63%);
+                                color: black;
+                            }
+
+                            &::before {
+                                content: '';
+                                position: absolute;
+                                top: 0;
+                                left: 0;
+                                right: 0;
+                                bottom: size(4);
+                                background-image: url(../img/game/HOTP/border.png);
+                                background-size: 100%;
+                                background-repeat: no-repeat;
+                                z-index: 2;
+                            }
+                        }
+
+                        .compare {
+                            grid-column: -2/-1;
+                            grid-row: 1/2;
+                            display: flex;
+                            gap: size(16);
+
+                            div {
+                                flex: calc((100% - size(16))/2);
+                                display: grid;
+                                grid-template-rows: 50% 50%;
+                                grid-template-columns: size(68) 1fr;
+                                gap: 0 size(8);
+
+                                img {
+                                    grid-row: 1/-1;
+                                    grid-column: 1/2;
+                                    border-radius: size(100);
+                                }
+
+                                h6 {
+                                    grid-row: 1/2;
+                                    grid-column: -2/-1;
+                                    display: flex;
+                                    align-items: flex-end;
+                                    padding: size(4) 0;
+                                    border-bottom: size(1) solid color(gray-4);
+                                }
+
+                                span {
+                                    grid-row: -2/-1;
+                                    grid-column: -2/-1;
+                                    @include capital;
+                                    padding: size(4) 0;
+                                }
+                            }
+                        }
+
+                        .desc {
+                            grid-column: -2/-1;
+                            grid-row: 2/-2;
+                            display: flex;
+                            flex-wrap: wrap;
+                            gap: size(16);
+
+                            p {
+                                @include capital;
+                                color: color(gray-4);
+                            }
+                        }
+
+                        .btns {
+                            grid-column: 1/-1;
+                            grid-row: -2/-1;
+                            display: flex;
+                            gap: size(8);
+                            align-items: center;
+                            justify-content: space-between;
+                            @include body-1;
+
+                            div {
+                                display: flex;
+                                gap: size(16);
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+
 
     // pc ~ 1440
     @include max-to(pc) {
@@ -507,6 +684,163 @@
                         }
                     }
                 }
+            }
+        }
+
+        &.HOTP {
+            .play-game {
+                .game-content {
+                    padding: size(120) size(68) size(68);
+
+                    .frame {
+                        padding-left: calc((((100svw - size(60)*2 - size(28)*2) * .6) - (size(88) * 2)) * .04);
+                        // 算式：(((window width - section padding - card padding) * game-zone flex) - (左右 padding)) * 左邊框4%
+                        padding-right: calc((((100svw - size(60)*2 - size(28)*2) * .6) - (size(88) * 2)) * .04);
+                        // 算式：(((window width - section padding - card padding) * game-zone flex) - (左右 padding)) * 右邊框4%
+
+                        &::before {
+                            top: calc((((100svw - size(60)*2 - size(28)*2) * .6) - (size(88) * 2)) * -.05);
+                            // 算式：(((window width - section padding - card padding) * game-zone flex) - (左右 padding)) * 上邊框5%
+                        }
+
+                        &::after {
+                            bottom: calc((((100svw - size(60)*2 - size(28)*2) * .6) - (size(88) * 2)) * -.035);
+                            // 算式：(((window width - section padding - card padding) * game-zone flex) - (左右 padding)) * 下邊框3.5%
+                        }
+
+                        &-content {
+                            padding: size(20) size(16);
+                            gap: size(16) size(12);
+                            grid-template-columns: calc(40% - size(6)) calc(60% - size(6));
+                            grid-template-rows: calc((size(68)*2) + size(12)) auto 1fr auto;
+                            // 說明：calc(換行*2 + gap)
+
+                            .img {
+                                padding: calc((((((((100svw - size(60)*2 - size(28)*2) * .6) - (size(88) * 2)) * .894) - (size(16) * 2)) * .4) - size(8)) * .045);
+                                // 算式：(((((window width - section padding - card padding) * game-zone flex) - (左右 padding)) * [100% - (左右邊框 5.3% * 2) = .894] - 左右 padding * .img flex 40%) - gap/2) * .img 邊框
+
+                                h6 {
+                                    right: calc((((((((100svw - size(60)*2 - size(28)*2) * .6) - (size(88) * 2)) * .894) - (size(16) * 2)) * .4) - size(8)) * .045);
+                                    // 算式：(((((window width - section padding - card padding) * game-zone flex) - (左右 padding)) * [100% - (左右邊框 5.3% * 2) = .894] - 左右 padding * .img flex 40%) - gap/2) * .img 邊框
+                                    bottom: calc(((((((((100svw - size(60)*2 - size(28)*2) * .6) - (size(88) * 2)) * .894) - (size(16) * 2)) * .4) - size(8)) * .045) + size(4));
+                                    // 算式：(((((window width - section padding - card padding) * game-zone flex) - (左右 padding)) * [100% - (左右邊框 5.3% * 2) = .894] - 左右 padding * .img flex 40%) - gap/2) * .img 邊框 + 4px
+                                }
+                            }
+
+                            .compare {
+                                gap: size(12);
+                                flex-wrap: wrap;
+                            }
+
+                            .btns {
+                                div {
+                                    gap: size(8);
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+
+            &+.content {
+                height: calc((100svw - size(60)*2 - size(28)*2) * .6 * .75 + size(40)) !important;
+                // (window width - section padding - card padding) * game-zone flex * 比例3/4 + 40px
+            }
+        }
+    }
+
+
+    // laptop ~ 1280
+    @include max-to(laptop) {
+        &.HOTP {
+            .play-game {
+                .game-content {
+                    padding: size(120) size(28) size(60);
+
+                    .frame {
+                        padding-left: calc((((100svw - size(60)*2 - size(28)*2) * .6) - (size(88) * 2)) * .053);
+                        // 算式：(((window width - section padding - card padding) * game-zone flex) - (左右 padding)) * 左邊框5.3%
+                        padding-right: calc((((100svw - size(60)*2 - size(28)*2) * .6) - (size(88) * 2)) * .053);
+                        // 算式：(((window width - section padding - card padding) * game-zone flex) - (左右 padding)) * 右邊框5.3%
+
+                        &::before {
+                            top: calc((((100svw - size(60)*2 - size(28)*2) * .6) - (size(88) * 2)) * -.068);
+                            // 算式：(((window width - section padding - card padding) * game-zone flex) - (左右 padding)) * 上邊框6.8%
+                        }
+
+                        &::after {
+                            bottom: calc((((100svw - size(60)*2 - size(28)*2) * .6) - (size(88) * 2)) * -.05);
+                            // 算式：(((window width - section padding - card padding) * game-zone flex) - (左右 padding)) * 下邊框5%
+                        }
+
+                        &-content {
+                            grid-template-columns: calc(55% - size(8)) calc(45% - size(8));
+                            grid-template-rows: auto 1fr auto;
+                            gap: size(16);
+
+                            .img {
+                                grid-column: 1/2;
+                                grid-row: 1/2;
+                                padding: calc((((((((100svw - size(60)*2 - size(28)*2) * .6) - (size(88) * 2)) * .894) - (size(16) * 2)) * .55) - size(8)) * .045);
+                                // 算式：(((((window width - section padding - card padding) * game-zone flex) - (左右 padding)) * [100% - (左右邊框 5.3% * 2) = .894] - 左右 padding * .img flex) - gap/2) * .img 邊框
+
+                                h6 {
+                                    right: calc((((((((100svw - size(60)*2 - size(28)*2) * .6) - (size(88) * 2)) * .894) - (size(16) * 2)) * .55) - size(8)) * .045);
+                                    // 算式：(((((window width - section padding - card padding) * game-zone flex) - (左右 padding)) * [100% - (左右邊框 5.3% * 2) = .894] - 左右 padding * .img flex) - gap/2) * .img 邊框
+                                    bottom: calc(((((((((100svw - size(60)*2 - size(28)*2) * .6) - (size(88) * 2)) * .894) - (size(16) * 2)) * .55) - size(8)) * .045) + size(4));
+                                    // 算式：(((((window width - section padding - card padding) * game-zone flex) - (左右 padding)) * [100% - (左右邊框 5.3% * 2) = .894] - 左右 padding * .img flex) - gap/2) * .img 邊框 + 4px
+                                }
+                            }
+
+                            .compare {
+                                grid-column: -2/-1;
+                                grid-row: 1/2;
+                                flex-direction: column;
+                                justify-content: space-between;
+
+                                div {
+                                    display: flex;
+                                    flex-direction: column;
+                                    justify-content: center;
+
+                                    img {
+                                        flex: size(72);
+                                        max-height: size(72);
+                                        margin: size(2) auto;
+                                    }
+
+                                    h6 {
+                                        padding: size(2) 0;
+                                        display: flex;
+                                        align-items: flex-end;
+                                        justify-content: center;
+                                    }
+
+                                    span {
+                                        padding: size(2) 0;
+                                        display: block;
+                                        text-align: center;
+                                    }
+                                }
+                            }
+
+                            .desc {
+                                grid-column: 1/-1;
+                                grid-row: 2/-2;
+                            }
+
+                            .btns {
+                                grid-column: 1/-1;
+                                grid-row: -2/-1;
+                            }
+                        }
+                    }
+                }
+            }
+
+            &+.content {
+                height: calc((100svw - size(60)*2 - size(28)*2) * .6 + size(40)) !important;
+                // (window width - section padding - card padding) * game-zone flex + 40px
             }
         }
     }
@@ -596,6 +930,49 @@
                                     &.item {
                                         max-height: size(40);
                                     }
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        }
+
+        &.HOTP {
+            height: calc((100svw - 7.5rem - 3.5rem) * 0.6);
+
+            &.play {
+                height: auto;
+            }
+
+            .play-game {
+                .game-content {
+                    .frame {
+                        padding-left: calc(((100svw - size(60)*2 - size(28)*2) - (size(88) * 2)) * .05);
+                        // 算式：(((window width - section padding - card padding) - (左右 padding)) * 左邊框5%
+                        padding-right: calc(((100svw - size(60)*2 - size(28)*2) - (size(88) * 2)) * .05);
+                        // 算式：(((window width - section padding - card padding) - (左右 padding)) * 右邊框5%
+
+                        &::before {
+                            top: calc((((100svw - size(60)*2 - size(28)*2)) - (size(88) * 2)) * -.065);
+                            // 算式：(((window width - section padding - card padding) - (左右 padding)) * 上邊框6.5%
+                        }
+
+                        &::after {
+                            bottom: calc((((100svw - size(60)*2 - size(28)*2)) - (size(88) * 2)) * -.05);
+                            // 算式：(((window width - section padding - card padding) - (左右 padding)) * 下邊框5%
+                        }
+
+                        &-content {
+                            .img {
+                                padding: calc(((((((100svw - size(60)*2 - size(28)*2) - (size(88) * 2)) * .894) - (size(16) * 2)) * .55) - size(8)) * .045);
+                                // 算式：((((window width - section padding - card padding) - (左右 padding)) * [100% - (左右邊框 5.3% * 2) = .894] - 左右 padding * .img flex) - gap/2) * .img 邊框
+
+                                h6 {
+                                    right: calc(((((((100svw - size(60)*2 - size(28)*2) - (size(88) * 2)) * .894) - (size(16) * 2)) * .55) - size(8)) * .045);
+                                    // 算式：((((window width - section padding - card padding) - (左右 padding)) * [100% - (左右邊框 5.3% * 2) = .894] - 左右 padding * .img flex) - gap/2) * .img 邊框
+                                    bottom: calc((((((((100svw - size(60)*2 - size(28)*2) - (size(88) * 2)) * .894) - (size(16) * 2)) * .55) - size(8)) * .045) + size(4));
+                                    // 算式：((((window width - section padding - card padding) - (左右 padding)) * [100% - (左右邊框 5.3% * 2) = .894] - 左右 padding * .img flex) - gap/2) * .img 邊框 + 4px
                                 }
                             }
                         }
