--- a/pre/scss/pages/_personal.scss
+++ b/pre/scss/pages/_personal.scss
@@ -236,7 +236,7 @@
             align-items: center;
             gap: size(36);
             @include body-2;
-            margin: size(16) 0;
+            margin-bottom: size(28);
 
             .days,
             .pages {
@@ -260,7 +260,7 @@
                     transition-property: color;
                 }
 
-                .dropdown-content {
+                &-content {
                     top: calc(100% + size(8));
                     left: auto;
                     transform: none;
@@ -272,6 +272,7 @@
 
                     ul {
                         padding-right: size(8);
+                        margin: size(16) 0;
 
                         >li {
 
@@ -315,29 +316,47 @@
             }
         }
 
-        .record- {
-            &price {
-                div {
-                    display: flex;
-                    align-items: center;
-                    gap: size(8);
+        table {
+            tr {
+                td {
+                    .record- {
+                        &time {
+                            width: size(220);
+                        }
 
-                    img {
-                        width: size(20);
+                        &trackno {
+                            word-break: break-all;
+                        }
+
+                        &price {
+                            width: size(300);
+
+                            div {
+                                display: flex;
+                                align-items: center;
+                                gap: size(8);
+
+                                img {
+                                    width: size(20);
+                                }
+                            }
+                        }
+
+                        &status {
+                            width: size(180);
+
+                            span {
+                                display: flex;
+                                gap: 0 size(8);
+                            }
+                        }
+
+                        &view {
+                            .button {
+                                min-width: max-content;
+                            }
+                        }
                     }
-                }
-            }
-
-            &status {
-                span {
-                    display: flex;
-                    gap: 0 size(8);
-                }
-            }
-
-            &view {
-                .button {
-                    min-width: max-content;
                 }
             }
         }
@@ -417,7 +436,7 @@
                                 }
 
                                 &status {
-                                    flex: calc(40% - size(10));
+                                    flex: calc(20% - size(10));
                                     align-self: flex-start;
                                     display: flex;
                                     align-items: center;
@@ -435,8 +454,13 @@
                                     flex: 100%;
                                     order: 3;
                                     display: flex;
-                                    align-items: center;
+                                    align-items: flex-start;
                                     justify-content: space-between;
+
+                                    span {
+                                        word-break: keep-all;
+                                        padding-right: size(8);
+                                    }
                                 }
 
                                 &time,
