更新小網 fulldown 樣式

--- a/pre/scss/components/_fulldown.scss
+++ b/pre/scss/components/_fulldown.scss
@@ -14,7 +14,7 @@
             background-color: color(primary);
             transform: none;
             border-radius: 0;
-            transition-property: max-height;
+            transition-property: max-height, padding;
 
             >ul {
                 width: 100%;
