--- a/css/mainPage.css
+++ b/css/mainPage.css
@@ -411,7 +411,7 @@ body {
   flex-wrap: wrap;
   justify-content: center;
   gap: 0.5rem;
-  max-height: 12.5rem;
+  max-height: 13.75rem;
   overflow-y: auto;
 }
 #mainPage .dropdown-content > ul::-webkit-scrollbar {
@@ -460,7 +460,7 @@ body {
   }
   #mainPage .dropdown:hover .dropdown-content {
     padding: 1.75rem 1.25rem;
-    max-height: 18.75rem;
+    max-height: 17.5rem;
     opacity: 1;
   }
 }
@@ -487,7 +487,7 @@ body {
     background-color: #871B1F;
     transform: none;
     border-radius: 0;
-    transition-property: max-height;
+    transition-property: max-height, padding;
   }
   #mainPage .fulldown .fulldown-content > ul {
     width: 100%;
@@ -1399,6 +1399,11 @@ body {
   left: 3.75rem;
   right: 3.75rem;
 }
+@media (min-width: 1281px) {
+  #mainPage header .login .admin:hover button::after {
+    content: "\e903";
+  }
+}
 @media (max-width: 1440px) {
   #mainPage header {
     padding: 1.3888888889svw 3.6111111111svw;
@@ -1423,11 +1428,6 @@ body {
     right: 2.5rem;
   }
 }
-@media (min-width: 1281px) {
-  #mainPage header .login .admin:hover button::after {
-    content: "\e903";
-  }
-}
 @media (max-width: 1280px) {
   #mainPage header {
     padding: 0.75rem 1rem;
@@ -1439,14 +1439,8 @@ body {
   #mainPage header .options .menu {
     display: flex;
   }
-  #mainPage header .options .nav {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
   #mainPage header .options .nav > ul {
     width: calc(100svw - 2rem);
-    transform: translate(0, -6.25rem);
     gap: 1.25rem;
   }
   #mainPage header .options .nav > ul > li > a {
