--- a/pre/scss/components/_form.scss
+++ b/pre/scss/components/_form.scss
@@ -1,5 +1,3 @@
-form {}
-
 input,
 textarea {
     background-color: color(gray-9);
@@ -68,6 +66,7 @@ textarea {
 
     button {
         background-color: transparent;
+        color: color(gray-2);
         position: absolute;
         width: size(24);
         height: size(24);
@@ -75,5 +74,12 @@ textarea {
         top: 50%;
         right: size(24);
         transform: translateY(-50%);
+        transition-property: color;
+
+        @media (hover: hover) {
+            &:hover {
+                color: white;
+            }
+        }
     }
 }
