--- a/pre/scss/mainPage.scss
+++ b/pre/scss/mainPage.scss
@@ -44,6 +44,7 @@ body {
     @import "components/toast";
     @import "components/form";
     @import "components/swiper-custom";
+    @import "components/volume";
     @import "components/loading";
 
     @import "global";
