--- a/pre/scss/pages/_game-play.scss
+++ b/pre/scss/pages/_game-play.scss
@@ -552,6 +552,7 @@
 
                     &-result {
                         background-color: rgba(color(gray-9), .8);
+                        background-image: radial-gradient(ellipse at 50% 0, rgba(white, .15) size(10), rgba(white, .08) size(60), transparent size(200));
                         padding: size(20);
                         display: grid;
                         gap: size(16);
